--- a/draft-ietf-payload-rfc3189bis-02.html
+++ b/draft-ietf-payload-rfc3189bis-02.html
@@ -372,9 +372,10 @@
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations">
 <link href="#rfc.section.7" rel="Chapter" title="7 Major Changes from RFC 3189">
 <link href="#rfc.section.8" rel="Chapter" title="8 Interoperability with Previous Implementations">
-<link href="#rfc.references" rel="Chapter" title="9 References">
-<link href="#rfc.references.1" rel="Chapter" title="9.1 Normative References">
-<link href="#rfc.references.2" rel="Chapter" title="9.2 Informative References">
+<link href="#rfc.section.9" rel="Chapter" title="9 Acknowledgment ">
+<link href="#rfc.references" rel="Chapter" title="10 References">
+<link href="#rfc.references.1" rel="Chapter" title="10.1 Normative References">
+<link href="#rfc.references.2" rel="Chapter" title="10.2 Informative References">
 <link href="#rfc.authors" rel="Chapter">
 
 
@@ -413,7 +414,7 @@
 <td class="right">Keio University</td>
 </tr>
 <tr>
-<td class="left">Expires: December 09, 2011</td>
+<td class="left">Expires: March 15, 2012</td>
 <td class="right">S.C. Casner</td>
 </tr>
 <tr>
@@ -430,7 +431,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">June 07, 2011</td>
+<td class="right">September 12, 2011</td>
 </tr>
 
     	
@@ -438,7 +439,7 @@
   </table>
 
   <p class="title">RTP Payload Format for DV (IEC 61834) Video <br />
-  <span class="filename">draft-ietf-payload-rfc3189bis-01</span></p>
+  <span class="filename">draft-ietf-payload-rfc3189bis-02</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document specifies the packetization scheme for encapsulating the compressed digital video data streams commonly known as "DV" into a payload format for the Real-Time Transport Protocol (RTP).  This document obsoletes RFC 3189.</p>
@@ -446,10 +447,11 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 09, 2011.</p>
+<p>This Internet-Draft will expire on March 15, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
+<p>This document may contain material from IETF Documents or IETF Contributions published or made publicly available before November 10, 2008.  The person(s) controlling the copyright in some of this material may not have granted the IETF Trust the right to allow modifications of such material outside the IETF Standards Process. Without obtaining an adequate license from the person(s) controlling the copyright in such materials, this document may not be modified outside the IETF Standards Process, and derivative works of it may not be created outside the IETF Standards Process, except to format it for publication as an RFC or to translate it into languages other than English.</p>
 
   
   <hr class="noprint" />
@@ -498,11 +500,13 @@
 </li>
 <li>8.   <a href="#rfc.section.8">Interoperability with Previous Implementations</a>
 </li>
-<li>9.   <a href="#rfc.references">References</a>
+<li>9.   <a href="#rfc.section.9">Acknowledgment </a>
 </li>
-<li>9.1.   <a href="#rfc.references.1">Normative References</a>
+<li>10.   <a href="#rfc.references">References</a>
 </li>
-<li>9.2.   <a href="#rfc.references.2">Informative References</a>
+<li>10.1.   <a href="#rfc.references.1">Normative References</a>
+</li>
+<li>10.2.   <a href="#rfc.references.2">Informative References</a>
 </li>
 <li><a href="#rfc.authors">Authors' Addresses</a>
 </li>
@@ -871,8 +875,6 @@
 <dd>Added considerations for the offer/answer model.</dd>
 <dt>6 .</dt>
 <dd>Revised Media Types registration form based on new registration rule (RFC 4855).</dd>
-<dt>7 .</dt>
-<dd>Revised section structure based on new example.</dd>
 </dl>
 
 <p> </p>
@@ -882,10 +884,13 @@
 <p id="rfc.section.8.p.2">RFC 3189 regards SMPTE306M <a href="#SMPTE306M">[SMPTE306M]</a> and SMPTE314M as different encoding formats, although the format of SMPTE 306M is already covered by SMPTE 314M. Therefore, this document recommends that the definition depending on SMPTE306M SHOULD NOT be used, and SMPTE314M SHOULD be used instead.  An RTP application could handle a stream identified in SMPTE306M encoding as in SMPTE314M encoding instead.</p>
 <p id="rfc.section.8.p.3">An offer MAY include SMPTE306M encoding coming from a legacy system and receivers SHOULD support this value.</p>
 <p id="rfc.section.8.p.4">If an initial offer that did not include SMPTE306M was rejected, the offerer MAY try a new offer with SMPTE306M. For this case, an RTP application MAY handle a stream identified in SMPTE306M encoding as in SMPTE314M encoding instead.</p>
+<h1 id="rfc.section.9">
+<a href="#rfc.section.9">9.</a> Acknowledgment </h1>
+<p id="rfc.section.9.p.1">Thanks to former authors of this document; Akimichi Ogawa.</p>
 <h1 id="rfc.references">
-<a href="#rfc.references">9.</a> References</h1>
+<a href="#rfc.references">10.</a> References</h1>
 <h1 id="rfc.references.1">
-<a href="#rfc.references.1">9.1.</a> Normative References</h1>
+<a href="#rfc.references.1">10.1.</a> Normative References</h1>
 <table><tbody>
 <tr>
 <td class="reference"><b id="RFC3550">[RFC3550]</b></td>
@@ -954,7 +959,7 @@
 </tr>
 </tbody></table>
 <h1 id="rfc.references.2">
-<a href="#rfc.references.2">9.2.</a> Informative References</h1>
+<a href="#rfc.references.2">10.2.</a> Informative References</h1>
 <table><tbody>
 <tr>
 <td class="reference"><b id="RFC2250">[RFC2250]</b></td>
